<resources>
    <string name="app_name">Khaata Book</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="login_here"><font color='#6CA6EC'>Shop Owner?</font> Login Here</string>
    <string name="signup_here"><font color='#6CA6EC'>Already A Shop Owner?</font> Login Here</string>
    <string name="shop_name">Shop Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="shop_owner_login">Shop Owner Login</string>
    <string name="account_signup_here"><font color='#6CA6EC'>Don’t Have an account?</font> Signup Here</string>
    <string name="customer_login_here"><font color='#6CA6EC'>Customer?</font> Login Here</string>
    <string name="signup">Signup</string>
    <string name="enter_password">Enter Password</string>

</resources>
