<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entry_navigation.xml"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.store.storekhata.fragments.entry.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
    </fragment>
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.store.storekhata.fragments.entry.signup.SignupFragment"
        android:label="@string/signup"
        tools:layout="@layout/signup_fragment" >
        <action
            android:id="@+id/action_signupFragment_to_shopOwnerLoginFragment"
            app:destination="@id/shopOwnerLoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/shopOwnerLoginFragment"
        android:name="com.store.storekhata.ShopOwnerLoginFragment"
        android:label="@string/shop_owner_login" />
</navigation>